--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'io.coil-kt:coil:2.5.0'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
+
+    // Pinch-to-zoom for preview.
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
