--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,70 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
     <application
         android:allowBackup="true"
-        android:icon="@android:drawable/sym_def_app_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@android:drawable/sym_def_app_icon"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.App.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".FolderDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".MediaQueryActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".IdsGridActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SimilarDuplicatesActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".BlurryCandidatesActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".BurstDetectionActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".EventsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".PreviewActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".OldestMonthsActivity"
+            android:exported="false" />
     </application>
 </manifest>
