--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -26,12 +26,27 @@ jobs:
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v3
 
+      - name: Ensure Gradle wrapper executable
+        run: chmod +x ./gradlew
+
       - name: Build debug APK
-        run: ./gradlew :app:assembleDebug
+        run: ./gradlew :app:assembleDebug --no-daemon
+
+      - name: Verify APK exists
+        run: |
+          ls -lah app/build/outputs/apk/debug/
+          test -f app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload APK as workflow artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
 
       - name: Attach APK to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             app/build/outputs/apk/debug/app-debug.apk
+          fail_on_unmatched_files: true
           generate_release_notes: true
